--- a/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -19,7 +19,7 @@
                                     toptan spor malzemesi">
 }
 
-@Html.PartialAsync("_ManageNav")
+@Html.Partial("_ManageNav")
 <section class="manage-section">
     <div class="auto-container">
         <div class="row clearfix">
