--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -38,7 +38,7 @@
     </div>
 </section>
 <!--End Welcome Section-->
-@Html.PartialAsync("_PartialEcommerceService")
+@Html.Partial("_PartialEcommerceService")
 <!--End Work Section-->
 <!--Fluid Section One-->
 <section class="fluid-section-one">
