--- a/Views/Shared/_PartialProductCard.cshtml
+++ b/Views/Shared/_PartialProductCard.cshtml
@@ -96,4 +96,4 @@ else
     <a asp-controller="Shop" asp-action="Index">Alışverişe Devam Edin</a>
 }
 
-@Html.PartialAsync("_PartialPaginationWidget", Model.pagination)
+@Html.Partial("_PartialPaginationWidget", Model.pagination)
