--- a/Areas/Identity/Pages/Account/Manage/Orders.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Orders.cshtml
@@ -13,7 +13,7 @@
     <meta name="keywords" content="Çin ithalat, toptan ürünler, perakende satış, marka patent, e-ticaret çözümleri, toptan spor malzemeleri ithalatı, marka desteği, toptan petshop ürünleri,
                                     toptan spor malzemesi">
 }
-@Html.PartialAsync("_ManageNav")
+@Html.Partial("_ManageNav")
 <section class="manage-section">
     <div class="auto-container">
         <div class="row clearfix">
