--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -17,7 +17,7 @@
 <input name="__RequestVerificationToken" type="hidden" value="TOKEN_VALUE" />
 <!--Cart Section-->
 <section class="cart-section" id="cart-content">
-    @Html.PartialAsync("_PartialCart",Model)
+    @Html.Partial("_PartialCart",Model)
 </section>
 <!--End Cart Section-->
 @section FancyBox {
@@ -38,7 +38,7 @@
                 var button = $(this);
                 $.ajax({
                     type: "POST",
-                    url: "/Home/RemoveCartItem",
+                    url: "/Cart/RemoveCartItem",
                     data: {
                         productCode: productCode,
                     },
@@ -55,7 +55,7 @@
                 });
                 $.ajax({
                     type: "POST",
-                    url: "/Home/InitializeCartNumber",
+                    url: "/Shop/InitializeCartNumber",
                     async: true,
                     success: function (response) {
                         let currentItem = response.message;
@@ -74,7 +74,7 @@
 
                 $.ajax({
                     type: "POST",
-                    url: "/Home/CartItemAmountChanged",
+                    url: "/Cart/CartItemAmountChanged",
                     headers: { "RequestVerificationToken": getAntiForgeryToken() },
                     data: {
                         productCode: productCode,
