--- a/Views/Shared/_PartialCart.cshtml
+++ b/Views/Shared/_PartialCart.cshtml
@@ -28,7 +28,7 @@
                                 <td class="prod-column">
                                     <div class="column-box">
                                         <figure class="prod-thumb">
-                                            <a asp-controller="Home" asp-action="ProductDetailed" asp-productCode="@item.ProductCode">
+                                            <a asp-controller="Shop" asp-action="ProductDetailed" asp-productCode="@item.ProductCode">
                                                 <img src="@Url.Content(string.Format("~/images/resource/products/{0}/1.jpg", item.ImagePath))" loading="lazy" alt="@item.ProductName">
                                             </a>
                                         </figure>
@@ -105,7 +105,7 @@
                 <!--Totals Table-->
                 <ul class="totals-table">
                     <li class="clearfix total"><span class="col">Toplam</span><span class="col ">@Model.TotalAmount ₺</span></li>
-                    <li class="text-right"><a class="theme-btn proceed-btn" asp-controller="Home" asp-action="CheckOut" style="cursor:pointer;">SEPETİ ONAYLA</a></li>
+                    <li class="text-right"><a class="theme-btn proceed-btn" asp-controller="Order" asp-action="CheckOut" style="cursor:pointer;">SEPETİ ONAYLA</a></li>
                 </ul>
             </div>
 
@@ -117,6 +117,6 @@
 else
 {
     <div class="auto-container">
-        <p>Sepetiniz Boş, <a type="button" asp-controller="Home" asp-action="Shop">alışverişe devam edin</a></p>
+        <p>Sepetiniz Boş, <a type="button" asp-controller="Shop" asp-action="Index">alışverişe devam edin</a></p>
     </div>
 }
