--- a/Views/Shop/ProductDetailed.cshtml
+++ b/Views/Shop/ProductDetailed.cshtml
@@ -99,12 +99,12 @@
                         <div class="basic-details">
                             <div class="row clearfix">
                                 <div class="image-column col-lg-6 col-md-12 col-sm-12" id="variant-image">
-                                    @Html.PartialAsync("_PartialProductVariantImage", Model.ProductVariantImage)
+                                    @Html.Partial("_PartialProductVariantImage", Model.ProductVariantImage)
                                 </div>
                                 <div class="info-column col-lg-6 col-md-12 col-sm-12">
 
                                     <div class="details-header" id="variant-info">
-                                        @Html.PartialAsync("_PartialProductVariantInfo", Model.ProductVariantInfo)
+                                        @Html.Partial("_PartialProductVariantInfo", Model.ProductVariantInfo)
                                     </div>
                                     <!--variant list-->
                                     <div class="product-variants">
@@ -189,8 +189,8 @@
                 <aside class="sidebar">
 
 
-                    @Html.PartialAsync("_PartialPopularProductsWidget", Model.PopularProducts)
-                    @Html.PartialAsync("_PartialRelatedProductsWidget", Model.RelatedProducts)
+                    @Html.Partial("_PartialPopularProductsWidget", Model.PopularProducts)
+                    @Html.Partial("_PartialRelatedProductsWidget", Model.RelatedProducts)
 
                 </aside>
             </div>
@@ -292,7 +292,7 @@
                     type: "POST",
                     headers: { "RequestVerificationToken": getAntiForgeryToken() },
                     async: true,
-                    url: "/Shop/AddToCart",
+                    url: "/Cart/AddToCart",
                     data: {
                         userId: userId,
                         productCode: productCode,
