--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -44,12 +44,12 @@
                             <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="isim@ornek.com" />
                         </div>
                         <div class="form-group">
-                            <label asp-for="Input.Password">Password</label>
+                            <label asp-for="Input.Password">Şifre</label>
                             <span asp-validation-for="Input.Password" class="text-danger"></span>
                             <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="şifre" />
                         </div>
                         <div class="form-group">
-                            <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                            <label asp-for="Input.ConfirmPassword">Şifreyi Doğrula</label>
                             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                             <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="şifreyi doğrula" />
                             
