--- a/Views/Order/CheckOut.cshtml
+++ b/Views/Order/CheckOut.cshtml
@@ -332,7 +332,7 @@
                     IsBillingSame: $("#is-billing-same").is(":checked"),
                      IsCorporate:false,
                     Country: "Türkiye",
-                    VATnumber :0,
+                    VATnumber :"",
                     VATState :"",
                 };
 
@@ -353,7 +353,7 @@
                         IsBillingSame: $("#is-billing-same").is(":checked"),
                         IsCorporate:false,
                         Country: "Türkiye",
-                        VATnumber:0,
+                        VATnumber:"11111111111",
                         VATState:"",
                     };
                 }
@@ -374,7 +374,7 @@
                         IsBillingSame: $("#is-billing-same").is(":checked"),
                         IsCorporate: $("#is-corporate").is(":checked"),
                         Country: "Türkiye",
-                        VATnumber : parseInt($("#vat").val()),
+                        VATnumber : $("#vat").val(),
                         VATState : $("#vat-state").val(),
                     };
                 };
