--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -20,9 +20,17 @@
 <section class="login-section">
     <div class="auto-container">
         <div class="row clearfix">
-            <h1>@ViewData["Title"]</h1>
-            <partial name="_StatusMessage" model="Model.StatusMessage" />
+            <div class="col-md-12">
 
+                <h1 class="mb-1">@ViewData["Title"]</h1>
+
+                <partial name="_StatusMessage" model="Model.StatusMessage" />
+
+                <p class="mt-3">
+                    <a asp-page="./Login">Buraya tıklayarak</a> giriş yapabilirsiniz...
+                </p>
+
+            </div>
         </div>
     </div>
 </section>
