--- a/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -20,6 +20,7 @@
 <section class="login-section">
     <div class="auto-container">
         <div class="row clearfix">
+            <div class="col-md-12"
             <h1>@ViewData["Title"]</h1>
             <partial name="_StatusMessage" model="Model.StatusMessage" />
 
