--- a/Views/Payment/Index.cshtml
+++ b/Views/Payment/Index.cshtml
@@ -499,7 +499,7 @@
                         City: "",
                         Country: "",
                         Force3Ds:force3Ds,
-			EmailAddress = emailAddress,
+			            EmailAddress: emailAddress,
                     };
 
                     // Send AJAX request
