--- a/Areas/Identity/Pages/Account/ExternalLogin.cshtml
+++ b/Areas/Identity/Pages/Account/ExternalLogin.cshtml
@@ -26,7 +26,7 @@
 
                 <p id="external-login-description" class="text-info">
                      <strong>@Model.ProviderDisplayName</strong> tarafından başarıyla doğrulandınız.
-                    Giriş yapmak için lütfen aşağıdaki formu doldurunuz.
+                    Kayıt olmak için lütfen aşağıdaki formu doldurunuz.
                 </p>
 
                 <div class="row">
