--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -27,7 +27,7 @@
                 <partial name="_StatusMessage" model="Model.StatusMessage" />
 
                 <p class="mt-3">
-                    <a asp-page="./Login">Buraya tıklayarak</a> giriş yapabilirsiniz...
+                    <a asp-area="Identity" asp-page="./Account/Manage/Index">Buraya tıklayarak</a> hesabınıza ulaşabilirsiniz...
                 </p>
 
             </div>
