--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -25,10 +25,21 @@
                 <h1 class="mb-1">@ViewData["Title"]</h1>
 
                 <partial name="_StatusMessage" model="Model.StatusMessage" />
+ 
+               @if(Model.StatusMessage == "Mailinizi doğruladığınız için teşekkür ederiz.")
+                {
+                     <p class="mt-3">
+                        <a asp-area="Identity" asp-page="./Account/Manage/Index">Buraya tıklayarak</a> hesabınıza ulaşabilirsiniz...
+                    </p>
+                }
+               else
+                {
+                    <p class="mt-3">
+                        <a asp-area="Identity" asp-page="./Account/Manage/Index">Buraya tıklayarak</a> hesabınıza ulaşabilirsiniz...
+                    </p>
+                }
 
-                <p class="mt-3">
-                    <a asp-area="Identity" asp-page="./Account/Manage/Index">Buraya tıklayarak</a> hesabınıza ulaşabilirsiniz...
-                </p>
+                
 
             </div>
         </div>
