--- a/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -19,7 +19,7 @@
     <div class="auto-container">
         <div class="row clearfix">
             <div class="column col-lg-6 col-md-12 col-sm-12">
-                @if(TempData[SuccessMessage] == "Doğrulama Maili Gönderildi")
+                @if(TempData[SuccessMessage] == "Doğrulama Maili Gönderildi.")
                 {
                     <h1>Kayıt Onayla</h1>
                
