--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -35,7 +35,7 @@
                else
                 {
                     <p class="mt-3">
-                        <a asp-area="Identity" asp-page="./Account/Manage/Index">Buraya tıklayarak</a> hesabınıza ulaşabilirsiniz...
+                        <a asp-area="Identity" asp-page="./Account/Login">Buraya tıklayarak</a> giriş yapabilirsiniz...
                     </p>
                 }
 
