--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -29,7 +29,7 @@
                @if(Model.StatusMessage == "Mailinizi doğruladığınız için teşekkür ederiz.")
                 {
                      <p class="mt-3">
-                        <a <a href="/Identity/Account/Manage">Buraya tıklayarak</a> hesabınıza ulaşabilirsiniz...
+                        <a href="/Identity/Account/Manage">Buraya tıklayarak</a> hesabınıza ulaşabilirsiniz...
                     </p>
                 }
                else
