--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -50,6 +50,6 @@
          </div>
     </div>
 </section>
-@section Scripts {
+@section AdditionalScripts {
     <partial name="_ValidationScriptsPartial" />
 }
